--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@exponent/vector-icons": "~4.0.0",
     "exponent": "^14.0.0",
     "react": "~15.4.0",
-    "react-native": "https://github.com/exponent/react-native/archive/sdk-14.0.0.tar.gz"
+    "react-native": "https://github.com/exponent/react-native/archive/sdk-14.0.0.tar.gz",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^2.5.4"
   },
   "devDependencies": {
     "jest-exponent": "~0.2.1"
